reduce blanks on [a-c]*.org

--- a/src/code-quality-the-open-source-perspective.org
+++ b/src/code-quality-the-open-source-perspective.org
@@ -3,37 +3,39 @@
 1. 使用质量，比如使用的体验
 2. 外部质量，外部进行测试所体现的质量
 3. 内部质量，就是单纯对于单个部件进行评估
-4. 过程质量。关注过程而不是产品本身有可能是值得的，而且有时候还是不可或缺的。想象一下如果需要制造一个航空母舰，海军绝对不可能知识通过检查完工的航空母舰就确定它是否符合需求，海军需要做的是检查与航母的建造过程相关的过程元素，这可能包括设计师的资质证明，焊点的X光板以及所有的组装好的部件的验收测试结果。但是千万不要把这个过程走向了极端，不管我们就会过分关注过程质量
+4. 过程质量。关注过程而不是产品本身有可能是值得的，而且有时候还是不可或缺的。
+
+想象一下如果需要制造一个航空母舰，海军绝对不可能知识通过检查完工的航空母舰就确定它是否符合需求，海军需要做的是检查与航母的建造过程相关的过程元素，这可能包括设计师的资质证明，焊点的X光板以及所有的组装好的部件的验收测试结果。但是千万不要把这个过程走向了极端，不管我们就会过分关注过程质量
 
 -----
 对于软件质量能够从几个方面进行反应，下面就是软件质量具体的体现方面，这些内容都是相互影响的，在软件设计中我们需要做适当的权衡：
- 1. 功能性
-  -  相配度，软件功能和用户是否相配
-  -  准确性，计算结果的准确性
-  -  互操作性，和其他软件的互操作性
-  -  安全性，软件数据的安全保障
- 2. 可靠性
-  -  成熟，软件不容易出故障
-  -  容错，软件出现错误情况下依然能够继续工作
-  -  可恢复性，恢复数据并且继续执行
- 3. 可用性
-  -  易懂，用户能够非常容易快速使用
-  -  可掌握性，掌握它需要付出的努力少
-  -  可操作性，操作这个软件需要的精力少
-  -  吸引力，用户愿意使用这个软件
- 4. 效率
-  -  时间和空间的权衡
-  -  资源的使用，对于CPU，内存还有磁盘，网络这些使用需要越少越好
- 5. 可维护性
-  -  可分析性，找到修正和改进地方的难易程度
-  -  可变性，完成一个修改的难易程度
-  -  稳定性，修改之后出现问题的程度
-  -  易测性，是否能够验证修改的结果
- 6. 可移植性
-  -  适应性，软件代码在不同环境中运行的能力
-  -  可安装型，软件在各种环境中安装可行性
-  -  共存，软件在拥挤的环境中表现如何
-  -  可替代性，软件某个部分是否能够通过其他部分来代替
+1. 功能性
+  1. 相配度，软件功能和用户是否相配
+  2. 准确性，计算结果的准确性
+  3. 互操作性，和其他软件的互操作性
+  4. 安全性，软件数据的安全保障
+2. 可靠性
+  1. 成熟，软件不容易出故障
+  2. 容错，软件出现错误情况下依然能够继续工作
+  3. 可恢复性，恢复数据并且继续执行
+3. 可用性
+  1. 易懂，用户能够非常容易快速使用
+  2. 可掌握性，掌握它需要付出的努力少
+  3. 可操作性，操作这个软件需要的精力少
+  4. 吸引力，用户愿意使用这个软件
+4. 效率
+  1. 时间和空间的权衡
+  2.  资源的使用，对于CPU，内存还有磁盘，网络这些使用需要越少越好
+5. 可维护性
+  1.  可分析性，找到修正和改进地方的难易程度
+  2.  可变性，完成一个修改的难易程度
+  3. 稳定性，修改之后出现问题的程度
+  4. 易测性，是否能够验证修改的结果
+6. 可移植性
+  1. 适应性，软件代码在不同环境中运行的能力
+  2. 可安装型，软件在各种环境中安装可行性
+  3. 共存，软件在拥挤的环境中表现如何
+  4. 可替代性，软件某个部分是否能够通过其他部分来代替
 
 -----
 可以看到使用底层并行原语一定需要提高警惕。这种代码中的错误可能会导致通过测试很难发现，诊断和调试。使用形式化方法来对代码进行推理可能是一个很吸引人的建议，但是事实上，这种推理作为确保代码正确性的唯一选择，对于所有缺少数学方面训练的人来说极其困难。因此，请试着将这些代码替换为更好用的高级代码单元或者是基于耦合度较低的单元来设计系统-通过管道通信的进程或者是黑板是松耦合并行系统两个例子:-)
@@ -90,32 +92,32 @@ real time=user time+sys time+idle time. 所以可以分析出下面3种情况:
 
 -----
 可移植性分为:
- 1. 操作系统.
-  -  可选的程序,gcc,awk,sed,install,ln,ranlib
-  -  库的存在curses,dbm,mp
-  -  特性库函数的支持alloca,getpgr,mmap,strcol
-  -  某些头文件的存在signal.h,dirent.h
-e. 某些结构如何定义的st_dev,st_blocks
-f. 各种类型的支持size_t,pid_t
-g. C编译器的支持，比如const,inline,##,long long
-h. 操作系统服务，如对X窗口的支持等
- 2. 处理器体系结构
-  -  数据的大小和长度
-  -  数据存储的方式big endian或者是little endian
-  -  特定的汇编指令
- 3. 编译器与语言特性
-  -  编译器错误
-  -  非标准的扩展
-  -  新语言的特性
-  -  二进制兼容性
- 4. 图形界面用户环境(这个部分从来就没有统一过,跨平台的开发工具有)
-  -  Java
-  -  Tcl/Tk
-  -  Qt
-  -  GTK
-  -  wxWindows
- 5. 区域(这个没有看)
- 6. 硬件设备与平台
+1. 操作系统.
+  1. 可选的程序,gcc,awk,sed,install,ln,ranlib
+  2. 库的存在curses,dbm,mp
+  3. 特性库函数的支持alloca,getpgr,mmap,strcol
+  4. 某些头文件的存在signal.h,dirent.h
+  5. 某些结构如何定义的st_dev,st_blocks
+  6. 各种类型的支持size_t,pid_t
+  7. C编译器的支持，比如const,inline,##,long long
+  8. 操作系统服务，如对X窗口的支持等
+2. 处理器体系结构
+  1. 数据的大小和长度
+  2. 数据存储的方式big endian或者是little endian
+  3. 特定的汇编指令
+3. 编译器与语言特性
+  1. 编译器错误
+  2. 非标准的扩展
+  3. 新语言的特性
+  4. 二进制兼容性
+4. 图形界面用户环境(这个部分从来就没有统一过,跨平台的开发工具有)
+  1. Java
+  2. Tcl/Tk
+  3. Qt
+  4. GTK
+  5. wxWindows
+5. 区域(这个没有看)
+6. 硬件设备与平台
 
 -----
 尽管代码与物质的制品不同，不去管它也不会老化，但是程序还是因为一些原因被修改。可能是为了改正现有的错误而作的修正，可能是因为适应新的环境，也可能是为了满足新的需求而作的改进。包括增强系统功能的渐进行为(progressive activity)为了对系统演变所产生的负面影响进行校正的反回归行为(antiregressive activity).包括可分析性(analyzablity),可变性(changeability),稳定性(stability),可测性 (testability). 所以嘛，代码总是需要改的，以前我曾想过这个问题，软件不会老化，那么为什么需要去维护呢?人们买了一台机器之后如果发现这个机器不合用了，他们会去重新买另外一个机器，而不会要求机器开发者去重新修正。可能人们对于软件开发的灵活性和软件本身给予了太高的希望把
