--- a/src/computational-advertising.org
+++ b/src/computational-advertising.org
@@ -36,41 +36,49 @@ update@201509: 近期刘鹏老师出了一本书叫做 [[http://www.amazon.cn/%E
 - 邮件营销广告(Email Direct Marketing, EDM): EDM是一种主动的广告形式,它不需要等到用户接触的机会产生时才被动地提供广告,而是可以随时向认为合适的用户发送推广信息。不过也正因为如此,EDM非常容易变垃圾邮件的主要来源。
 
 *** 在线广告简史
-1. 把网站的HTML页面当成是杂志的版面,在里面插入广告位,按照杂志的广告那样去售卖。
-   - 这种在互联网上展示条幅(banner)广告创意的产品形式,我们称为显示广告(Display Advertising)。
-   - 合约式广告(Agreement-based Advertising): 即采用合同约定的方式确定某一广告位在某一时间段为某特定广告主所独占,并且根据双方的要求,确定广告创意的允许范围以及同一页面上的某种广告主排他策略。
-2. 我们是可以对不同的受众呈现不同的广告创意的! 定向广告(Targeted Advertising)
-   - 受众定向(Audience Targeting),即通过技术手段标定某个用户的性别、年龄或其他标签。
-   - 广告投放机(Ad Server),它将广告投送由直接嵌入页面变为实时响应前端请求,并根据用户标签自动决策和返回合适的广告创意。
-   - 由于从传统的品牌广告市场直接延伸而来,此时的定向广告仍然以合约的方式进行: 媒体向广告主保证某个投放量,并在此基础上确定合同的总金额以及量未完成情况下的赔偿方案。这种“担保式投送(Guaranteed Delivery)”的交易方式,逐渐成为互联网合约式广告的主要商业模式。
-   - 一般来说,这样的广告合约仍然主要面向品牌广告主,并且按照按千次展示付费(Cost Per Mille, CPM)的计费方式。
-   - 定向投放的最初动机,是供给方为了拆分流量以获得更高的营收。如果一开始就提供非常精细的定向,反而会造成售卖率的下降,因此,最初的定向标签往往都设置在在较粗的粒度上,最典型的是一些人口属性标签。
-3. 在受众定向的环境下合约广告系统问题和瓶颈
-   - 在满足各合约目标受众量要求的同时,尽可能为所有广告商分配到质更好的流量。
-	- 如何有效地将流量分配到各个合约互相交叉的人群覆盖上;
-	- 在线的环境下实时且经济地完成每一次展示决策。
-	- 在线分配问题（Online Allocation）
-   - 受众定向产生以后,市场向着精细化运作的方向快速发展,主要有两方面的发展趋势:
-	- 一是定向标签变得越来越精准;
-	- 二是广告主的数量不断膨胀。
-   - 在这些趋势下,仍然按照合约的方式售卖广告会碰到越来越多的麻烦:
-	- 首先,很难对这些细粒度标签组合的流量做准确预估;
-	- 其次,当一次展示同时满足多个合约的时候,仅仅按照量约束下的在线分配策略进行决策,有可能浪费掉了很多本来可以卖得更贵的流量
-4. 大胆一点,抛弃量的保证,而采用最唯利是图的策略来进行广告决策? 竞价广告(Auction-based Advertising)
-   - 在这种模式下,供给方只向广告主保证质即单位流量的成本,但不再以合约的方式给出量的保证, 换言之,对每一次展示,都基本按照收益最高的原则来决策。
-   - 竞价广告产生的最初场景,是在互联网广告最主要的金矿搜索广告(Search Ad)中。从广告的视角来看,我们也可以把付费搜索看做一种定向广告,即根据用户的即时兴趣定向投送的广告,而即时兴趣的标签就是关键词。很显然,这 种定向广告从一开始就直接达到了非常精准的程度,也就很自然地采用了竞价的方式售卖。
-   - 当搜索广告产生了巨大的收益以后,搜索引擎开始考虑将这样的变现方式推广到其他互联网媒体上:将用户的即时兴趣标签有搜索词换成正在浏览页面中提取的关键词,可以将这套竞价广告系统从搜索结果页照搬到媒体页面上,这就产生了上下文广告(Contextual Advertising)。
-   - 从宏观市场上看,竞价广告与合约广告有很大的不同。没有了合约的保证,大量的广告主处在一个多方博弈的环境中。与直觉不同的是,在如何收取广告主费用这一点上,我们并非按照微观上最优的方案实施,就可以达到整个市场最大的收益。关于定价机制的深入研究,产生了广义第二高价(Generalized Second Pricing)这一竞价重要的理论。
-5. 基于竞价机制和精准人群定向这两个核心功能,在线广告分化出了广告网络(Ad Network)这种新的市场形态。
-   - 它批量地运营媒体的广告位资源,按照人群或上下文标签售卖给需求方,在需求发生冲突时用竞价的方式决定流量分配。
-   - 广告网络的结算,以按点击付费(Cost per Click, CPC)的方式为主。虽然我们不太能指这种方式的千次展示收益(Revenue per Mille, RPM)可以达到合约式品牌广告的水平,但它使得大量中小互联网媒体有了切实可行的变现手段:这些媒体有一定的流量,但还不值得建立自己的销售团队面向品牌广告商售卖,直接把自己的广告库存(Inventory)托管给广告网络,借助广告网络的销售和代理团队为自己的流量变现。
-6. 这种面向多个广告网络或媒体按人群一站式采买广告，并优化投入产出比的需求方产品，我们称为自动交易终端(Automatic Trading Desk, ATD)。只能在广告网络定义好的定向标签组合上预先指定出价，而不能控制每一次展示的出价，因此，市场看起来象一个黑盒子，需求方只能靠选择合适的标签组合，以及阶段性调整出价来间接控制效果。
-7. 在广告网络中,核心的竞价逻辑是封闭的。这种封闭的竞价机制,仍然不能完全满足需求方越来越明确的利益要求。这样的目标催生了实时竞价(Real Time Bidding)技术。
-   - 试想下面的两个例子:一、某电子商务网站需要通过一次广告投放来向它的忠实用户推广某产品;二、某银行希望通过自己的信用卡用户在网络上找到类似 的潜在用户群,并通过广告争取这批潜在用户。 #note: 主要是这个受众定向太具体了，广告网络不可能计算出来什么是所谓的忠实用户因为和电商网站的访问数据过于相关
-   - 很显然,任何广告网络都不可能直接为这两个需 求提供人群标签。与其想办法满足这些不断产生的定制化需求,不如干脆设计一种开放的竞价逻 辑,让需求方按自己的人群定义来挑选流量!
-   - 所谓实时竞价,就是把拍卖的过程由广告主预先出价,变成每次展示时实时出价。只要把广告展示的上下文页面url,以及访客的cookie等信息传给需求方,它就有充分的信息来完成定制化的人群选择和出价。
-8. 需要注意的是,越是定制化的人群选择,往往就越精细,也就意味着单一媒体能达到的reach会相当有限。于是,市场上产生了大量聚合各媒体的剩余流量,采用实时竞价方式为他们变现的产品形态：广告交易平台(Ad Exchange)。
-9. 通过实时竞价的方式，按照定制化的人群标签购买广告，这样与广告交易平台接口的产品，我们称为需求方平台(Demand Side Platform, DSP)。因为充分的环境信息使得深入的计算和估计成为可能。基于DSP的广告采买，非常类似于股票市场上的程序交易，我们把这样的广告采买方式也叫做程序购买(Programmatic Buy)。
+- 把网站的HTML页面当成是杂志的版面,在里面插入广告位,按照杂志的广告那样去售卖。
+  - 这种在互联网上展示条幅(banner)广告创意的产品形式,我们称为显示广告(Display Advertising)。
+  - 合约式广告(Agreement-based Advertising): 即采用合同约定的方式确定某一广告位在某一时间段为某特定广告主所独占,并且根据双方的要求,确定广告创意的允许范围以及同一页面上的某种广告主排他策略。
+
+- 我们是可以对不同的受众呈现不同的广告创意的! 定向广告(Targeted Advertising)
+  - 受众定向(Audience Targeting),即通过技术手段标定某个用户的性别、年龄或其他标签。
+  - 广告投放机(Ad Server),它将广告投送由直接嵌入页面变为实时响应前端请求,并根据用户标签自动决策和返回合适的广告创意。
+  - 由于从传统的品牌广告市场直接延伸而来,此时的定向广告仍然以合约的方式进行: 媒体向广告主保证某个投放量,并在此基础上确定合同的总金额以及量未完成情况下的赔偿方案。这种“担保式投送(Guaranteed Delivery)”的交易方式,逐渐成为互联网合约式广告的主要商业模式。
+  - 一般来说,这样的广告合约仍然主要面向品牌广告主,并且按照按千次展示付费(Cost Per Mille, CPM)的计费方式。
+  - 定向投放的最初动机,是供给方为了拆分流量以获得更高的营收。如果一开始就提供非常精细的定向,反而会造成售卖率的下降,因此,最初的定向标签往往都设置在在较粗的粒度上,最典型的是一些人口属性标签。
+
+- 在受众定向的环境下合约广告系统问题和瓶颈
+  - 在满足各合约目标受众量要求的同时,尽可能为所有广告商分配到质更好的流量。
+  - 如何有效地将流量分配到各个合约互相交叉的人群覆盖上;
+  - 在线的环境下实时且经济地完成每一次展示决策。
+  - 在线分配问题（Online Allocation）
+  - 受众定向产生以后,市场向着精细化运作的方向快速发展,主要有两方面的发展趋势:
+    - 一是定向标签变得越来越精准;
+    - 二是广告主的数量不断膨胀。
+  - 在这些趋势下,仍然按照合约的方式售卖广告会碰到越来越多的麻烦:
+    - 首先,很难对这些细粒度标签组合的流量做准确预估;
+    - 其次,当一次展示同时满足多个合约的时候,仅仅按照量约束下的在线分配策略进行决策,有可能浪费掉了很多本来可以卖得更贵的流量
+
+- 大胆一点,抛弃量的保证,而采用最唯利是图的策略来进行广告决策? 竞价广告(Auction-based Advertising)
+  - 在这种模式下,供给方只向广告主保证质即单位流量的成本,但不再以合约的方式给出量的保证, 换言之,对每一次展示,都基本按照收益最高的原则来决策。
+  - 竞价广告产生的最初场景,是在互联网广告最主要的金矿搜索广告(Search Ad)中。从广告的视角来看,我们也可以把付费搜索看做一种定向广告,即根据用户的即时兴趣定向投送的广告,而即时兴趣的标签就是关键词。很显然,这 种定向广告从一开始就直接达到了非常精准的程度,也就很自然地采用了竞价的方式售卖。
+  - 当搜索广告产生了巨大的收益以后,搜索引擎开始考虑将这样的变现方式推广到其他互联网媒体上:将用户的即时兴趣标签有搜索词换成正在浏览页面中提取的关键词,可以将这套竞价广告系统从搜索结果页照搬到媒体页面上,这就产生了上下文广告(Contextual Advertising)。
+  - 从宏观市场上看,竞价广告与合约广告有很大的不同。没有了合约的保证,大量的广告主处在一个多方博弈的环境中。与直觉不同的是,在如何收取广告主费用这一点上,我们并非按照微观上最优的方案实施,就可以达到整个市场最大的收益。关于定价机制的深入研究,产生了广义第二高价(Generalized Second Pricing)这一竞价重要的理论。
+
+- 基于竞价机制和精准人群定向这两个核心功能,在线广告分化出了广告网络(Ad Network)这种新的市场形态。
+  - 它批量地运营媒体的广告位资源,按照人群或上下文标签售卖给需求方,在需求发生冲突时用竞价的方式决定流量分配。
+  - 广告网络的结算,以按点击付费(Cost per Click, CPC)的方式为主。虽然我们不太能指这种方式的千次展示收益(Revenue per Mille, RPM)可以达到合约式品牌广告的水平,但它使得大量中小互联网媒体有了切实可行的变现手段:这些媒体有一定的流量,但还不值得建立自己的销售团队面向品牌广告商售卖,直接把自己的广告库存(Inventory)托管给广告网络,借助广告网络的销售和代理团队为自己的流量变现。
+
+- 这种面向多个广告网络或媒体按人群一站式采买广告，并优化投入产出比的需求方产品，我们称为自动交易终端(Automatic Trading Desk, ATD)。只能在广告网络定义好的定向标签组合上预先指定出价，而不能控制每一次展示的出价，因此，市场看起来象一个黑盒子，需求方只能靠选择合适的标签组合，以及阶段性调整出价来间接控制效果。
+
+- 在广告网络中,核心的竞价逻辑是封闭的。这种封闭的竞价机制,仍然不能完全满足需求方越来越明确的利益要求。这样的目标催生了实时竞价(Real Time Bidding)技术。
+  - 试想下面的两个例子:一、某电子商务网站需要通过一次广告投放来向它的忠实用户推广某产品;二、某银行希望通过自己的信用卡用户在网络上找到类似 的潜在用户群,并通过广告争取这批潜在用户。 #note: 主要是这个受众定向太具体了，广告网络不可能计算出来什么是所谓的忠实用户因为和电商网站的访问数据过于相关
+  - 很显然,任何广告网络都不可能直接为这两个需 求提供人群标签。与其想办法满足这些不断产生的定制化需求,不如干脆设计一种开放的竞价逻 辑,让需求方按自己的人群定义来挑选流量!
+  - 所谓实时竞价,就是把拍卖的过程由广告主预先出价,变成每次展示时实时出价。只要把广告展示的上下文页面url,以及访客的cookie等信息传给需求方,它就有充分的信息来完成定制化的人群选择和出价。
+
+- 需要注意的是,越是定制化的人群选择,往往就越精细,也就意味着单一媒体能达到的reach会相当有限。于是,市场上产生了大量聚合各媒体的剩余流量,采用实时竞价方式为他们变现的产品形态：广告交易平台(Ad Exchange)。
+
+- 通过实时竞价的方式，按照定制化的人群标签购买广告，这样与广告交易平台接口的产品，我们称为需求方平台(Demand Side Platform, DSP)。因为充分的环境信息使得深入的计算和估计成为可能。基于DSP的广告采买，非常类似于股票市场上的程序交易，我们把这样的广告采买方式也叫做程序购买(Programmatic Buy)。
 
 基本上可以说,这一图谱是从两端向中间逐渐发展和形成的:首先是合约阶段,广告主通过代理公司(Agency)从媒体方采买广告,而媒体方的Ad Server则负责完成和优化各个广告主的合约; 然后,市场进化出了竞价售卖方式,从而在靠近供给方产生了广告网络(Ad Network)这样的产品形态,而需求方的代理公司为了适应这一市场变化,孵化除了对应的广告采买平台(Media Buying Platform);最后,当市场产生了实时竞价方式交易时,供给方进化出了广告交易平台(Ad Exchange),而需求方则需要用需求方平台(DSP)与其对接来出价和投送广告。
 
@@ -91,9 +99,9 @@ file:images/ads-effect-procedure.png
 - 理解(Comprehension)阶段:受众意识到了广告的存在,并不意味着他一定能够理解广告传达的信息。理解阶段有哪些原则呢?
   1. 广告内容要在用户能理解的具体兴趣范围内,这就说明了真正精准的受众定向有多么必要。
   2. 要注意设定与关注程度相匹配的理解门槛。
-	- 电视广告中,可以用有一定情节的短故事来宣传品牌;
-     - 在路牌广告中,创意制作原则是将若干主要市场诉求都表达出来;
-	- 而对于互联网广告,由于用户的关注程度非常低,我们应该集中强调一个主要诉求以吸引用户的注意力。
+    1. 电视广告中,可以用有一定情节的短故事来宣传品牌;
+    2. 在路牌广告中,创意制作原则是将若干主要市场诉求都表达出来;
+    3. 而对于互联网广告,由于用户的关注程度非常低,我们应该集中强调一个主要诉求以吸引用户的注意力。
 - 接受(Acceptance)阶段:受众理解了广告传达的信息,并不一定表示他认可这些信息。
   - 广告的上下文环境对于广告的接受程度也有着很大的影响, 同一个品牌广告出现在某游戏社区上和门户网站首页上,用户会倾向于认为后者更具说服力,这也就是优质媒体的品牌价值。
   - 在定向广告越来越普遍的今天,如何让合适的广告出现在合适的媒体上,即广告安全(Ad Safety)的问题,正在引起大家越来越多的关注。
