--- a/src/fun.org
+++ b/src/fun.org
@@ -1,6 +1,13 @@
 #+title: Fun
 
 -----
+“什么叫细思恐极？”
+
+file:images/what-is-fear-after-deep-thought.jpg
+
+一次住院，在看正追的漫画，巡床医生路过看了一眼，淡淡地说，哟，还看连载呀。我....
+
+-----
 额，诺诺的问一句，斯诺克很难么，不就是坐在那里喝水么？
 
 -----
