[R] publish org files

--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,9 @@
 #+title: Paste
 
 -----
+纯自学第一遍读最好不超过两月，读不懂的跳过去，不求甚解。对一个发展迅速、知识尚未固化、外延极广的学科，先搭建大体框架要紧，开头不要试图弄懂所有细节。否则要么两年下来仍懵懵懂懂，要么对少量内容有了解、其他无知，失去进一步学习中触类旁通的机会。像画油画一样，一层层往上刷，后面再细琢磨。
+
+-----
 我认为对从业者来说，现代的物理学研究工作有点像职业足球。
 
 第一，大多是年轻人在做，做到一定年龄就会退役去做别的。如果你做的足够好、或者足够幸运，你可以（常常是成为教练）留下来继续做。
