add grpc discovery

--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,11 @@
 #+title: Paste
 
 -----
+市场竞争，政治竞选，生物进化，天气，有时会出现一个类似漩涡 (vortex) 这种极端现象。漩涡这种东西，是不能直接面对面斗争抵抗的，否则很容易被吸进去，不管你如何挣扎反抗。 更好的办法，是保持一个安全的距离，培养制造属于自己的漩涡，然后把大家慢慢吸过来。最好的投资标的，抽象上有和漩涡类似的结构。
+
+西游记里有什么金角大王银角大王，喊一个咒语，如果你答应一声，就会被吸到葫芦里去。这里面有一个隐喻，不要轻易地被他人的话术带到沟里去。如果你不自主地按照别人的逻辑框架去思考去对话，你就已经输了一大半了，要被吸到葫芦里了。
+
+-----
 @湾区日报BayArea: 以前一个同学在某大公司工作，说他有时候看到同事遇到困难，本能地想去帮忙，但一想到对自己晋升一点用都没有，同事如果出活了，他自己就不好看，于是忍住了。
 
 【为什么我要离开 Google 单干】作者在 Google 待了 4 年，为能升职费劲心思，工作中所做的一切都是为了能过晋升委员会这关。好好修 bug、帮同事、写高质量代码等，不能在与晋升无关的事上浪费时间。觉得没劲，就离职了。
