--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,9 @@
 #+title: Paste
 
 -----
+跟码农最困难的对话一般是：“这个做的太复杂了”，“我觉得这个一点都不复杂。来我跟你解释一下。” 很多人不理解的是，说一个东西太复杂和说一个东西太贵一样，本质上都是两个潜台词：你没想象中那么多钱/资源支持这个复杂性，这个东西不值得那么多钱/复杂性。代码的债务属性比资产属性大多了。
+
+-----
 市场竞争，政治竞选，生物进化，天气，有时会出现一个类似漩涡 (vortex) 这种极端现象。漩涡这种东西，是不能直接面对面斗争抵抗的，否则很容易被吸进去，不管你如何挣扎反抗。 更好的办法，是保持一个安全的距离，培养制造属于自己的漩涡，然后把大家慢慢吸过来。最好的投资标的，抽象上有和漩涡类似的结构。
 
 西游记里有什么金角大王银角大王，喊一个咒语，如果你答应一声，就会被吸到葫芦里去。这里面有一个隐喻，不要轻易地被他人的话术带到沟里去。如果你不自主地按照别人的逻辑框架去思考去对话，你就已经输了一大半了，要被吸到葫芦里了。
