[R] publish org files

--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,17 @@
 #+title: Paste
 
 -----
+https://www.youtube.com/watch?v=xLrdtCWjmGc
+
+你等年紀輕輕一遇挫折，便鬆散懈怠。日後怎成大器？
+
+為人者，有大度成大器也！
+
+夫處事之道，亦即應變之術，屺可偏執一端？
+
+用兵之道亦然如此，皆貴在隨機應變！
+
+-----
 跟码农最困难的对话一般是：“这个做的太复杂了”，“我觉得这个一点都不复杂。来我跟你解释一下。” 很多人不理解的是，说一个东西太复杂和说一个东西太贵一样，本质上都是两个潜台词：你没想象中那么多钱/资源支持这个复杂性，这个东西不值得那么多钱/复杂性。代码的债务属性比资产属性大多了。
 
 -----
