--- a/src/poem-and-movie.org
+++ b/src/poem-and-movie.org
@@ -536,3 +536,127 @@ But as some folks ain’t got no road at all
 They gotta stand in the same old place
 Hey, hey, so I guess I’m doin’ fine
 #+END_VERSE
+** 白日梦想家(The Secret Life of Walter Mitty)
+Beautiful things don't ask for attention.
+
+美好的事物不要轻易惊扰。
+
+To see the world,
+things dangerous to come to,
+to see behind walls,
+to draw closer,
+to find each other and to feel.
+That is the purpose of LIFE.
+
+开拓视野，冲破艰险，洞悉所有，贴近生活，寻找真爱，感受彼此。 这就是人生的目的。
+** Boots of Spanish Leather (Bob Dylan)
+#+BEGIN_VERSE
+Oh, I’m sailin’ away my own true love
+I’m sailin’ away in the morning
+Is there something I can send you from across the sea
+From the place that I’ll be landing?
+
+
+No, there’s nothin’ you can send me, my own true love
+There’s nothin’ I wish to be ownin’
+Just carry yourself back to me unspoiled
+From across that lonesome ocean
+
+
+Oh, but I just thought you might want something fine
+Made of silver or of golden
+Either from the mountains of Madrid
+Or from the coast of Barcelona
+
+
+Oh, but if I had the stars from the darkest night
+And the diamonds from the deepest ocean
+I’d forsake them all for your sweet kiss
+For that’s all I’m wishin’ to be ownin’
+
+
+That I might be gone a long time
+And it’s only that I’m askin’
+Is there something I can send you to remember me by
+To make your time more easy passin’
+
+
+Oh, how can, how can you ask me again
+It only brings me sorrow
+The same thing I want from you today
+I would want again tomorrow
+
+
+I got a letter on a lonesome day
+It was from her ship a-sailin’
+Saying I don’t know when I’ll be comin’ back again
+It depends on how I’m a-feelin’
+
+
+Well, if you, my love, must think that-a-way
+I’m sure your mind is roamin’
+I’m sure your heart is not with me
+But with the country to where you’re goin’
+
+
+So take heed, take heed of the western wind
+Take heed of the stormy weather
+And yes, there’s something you can send back to me
+Spanish boots of Spanish leather
+#+END_VERSE
+** The Times They Are A-Changin’ (Bob Dylan)
+#+BEGIN_VERSE
+Come gather ’round people
+Wherever you roam
+And admit that the waters
+Around you have grown
+And accept it that soon
+You’ll be drenched to the bone
+If your time to you is worth savin’
+Then you better start swimmin’ or you’ll sink like a stone
+For the times they are a-changin’
+
+
+Come writers and critics
+Who prophesize with your pen
+And keep your eyes wide
+The chance won’t come again
+And don’t speak too soon
+For the wheel’s still in spin
+And there’s no tellin’ who that it’s namin’
+For the loser now will be later to win
+For the times they are a-changin’
+
+
+Come senators, congressmen
+Please heed the call
+Don’t stand in the doorway
+Don’t block up the hall
+For he that gets hurt
+Will be he who has stalled
+There’s a battle outside and it is ragin’
+It’ll soon shake your windows and rattle your walls
+For the times they are a-changin’
+
+
+Come mothers and fathers
+Throughout the land
+And don’t criticize
+What you can’t understand
+Your sons and your daughters
+Are beyond your command
+Your old road is rapidly agin’
+Please get out of the new one if you can’t lend your hand
+For the times they are a-changin’
+
+
+The line it is drawn
+The curse it is cast
+The slow one now
+Will later be fast
+As the present now
+Will later be past
+The order is rapidly fadin’
+And the first one now will later be last
+For the times they are a-changin’
+#+END_VERSE
