--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,9 @@
 #+title: Paste
 
 -----
+马克思大女儿燕妮曾问历史学家维特克：“您能用最简明的语言，把人类历史浓缩在一本小册子里吗？” 维特克说：“只要四句德国谚语就够了：1、上帝让谁灭亡，总是先让他膨胀；2、时间是筛子，最终会淘去一切沉渣；3、蜜蜂盗花，结果却使花开茂盛；4、暗透了，更能看得见星光。”
+
+-----
 https://www.youtube.com/watch?v=xLrdtCWjmGc
 
 你等年紀輕輕一遇挫折，便鬆散懈怠。日後怎成大器？
