[R] publish org files

--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,22 @@
 #+title: Paste
 
 -----
+>> 吴老师，听了这两天的课后，我感觉“FUD策略”的本质其实就是：信息不对称。现代社会信息越来越透明、交流越来越畅通，这个策略是否就会失效？
+
+FUD其实更多地是利用人性的弱点。虽然信息流通可以更顺畅，但是人性是不会改变的。在危险来临的时候，人不自觉地会恐慌。比如坐过山车的时候，即使你告诉他不可怕，对方可能还是害怕。
+在历史上，每次股市暴跌时，很多人都忍不住恐慌性抛售，即使各种信息表明经济没有多么糟糕。虽然现在信息流通更顺畅了，但是人的这种恐慌依然存在，怀疑的心理依然存在，于是依然有股灾。对于未来，我不觉得FUD的影响会消失，这和信息无关，而和人性的弱点有关。
+
+-----
+梁宁产品思维30讲
+
+人和产品的五个层次：
+1. 感知层。一个产品，你拿到它，它设计的美不美，质感怎么样。一个人，你看到他的第一眼，这个人的身材、相貌，说话什么口音，穿衣服怎么搭配，这个就是最外层的感知层。
+2. 角色框架层。简单来讲就是，我们每个人都生活在角色里，并且被角色驯化。大家在接受各种服务。为你提供服务的那个人，其实也都是角色所设定好的沟通方式和交付内容，然后再与你进行沟通、交割和讨论。如果你和别人在角色扮演里对接，你就会被牢牢地捆在设定的角色中。
+3. 资源结构层。它可能会包括了一个人的财富资源、人脉资源、精神资源，每个人其实都是不一样的。就是我们人生的历程，其实大概在很多时刻，很多人都会处在同一个角色里，比如说我们都曾经是学生，或者是说毕业刚工作的时候，我们都是小职员。但是接下来，因为每个人的资源不一样，大家的精神资源不一样，出身背景、家庭的人脉资源不一样等等。资源结构会推动每个人，去往不同的地方。
+4. 能力圈。这就是我们刚才说的最内核是存在感，它的外面一层是能力圈。
+5. 存在感。如果一个人的存在感满足了，其实他的能力圈就不会再扩充了。就好像说好多女人结了婚就不化妆了，男人满足了就不奋斗了是一样的。因为扩充能力圈其实是一件很痛苦的事情，你想狮子为了吃饭去杀长颈鹿，其实它挨打也是极其痛苦的。
+
+-----
 马克思大女儿燕妮曾问历史学家维特克：“您能用最简明的语言，把人类历史浓缩在一本小册子里吗？” 维特克说：“只要四句德国谚语就够了：1、上帝让谁灭亡，总是先让他膨胀；2、时间是筛子，最终会淘去一切沉渣；3、蜜蜂盗花，结果却使花开茂盛；4、暗透了，更能看得见星光。”
 
 -----
