--- a/src/fun.org
+++ b/src/fun.org
@@ -1,6 +1,12 @@
 #+title: Fun
 
 -----
+期末考试又要到了[笑而不语][笑而不语]
+
+
+file:images/sugarcane-multi-usages.jpg
+
+-----
 “什么叫细思恐极？”
 
 file:images/what-is-fear-after-deep-thought.jpg
