--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,14 @@
 #+title: Paste
 
 -----
+为什么电影的帧率24fps就可以非常流畅，而电脑动画和游戏必须60fps呢？因为，电影的每一帧的曝光时间是几十毫秒，所以没一帧都是模糊帧。而电脑游戏的每一帧曝光时间无限接近0，是清晰帧。结果是，前者因为模糊而连贯，后者因为情绪而跳顿。
+
+-----
+长期正确的做法似乎应当是放手，但必须要承受短期的巨大压力。但因为大家不愿承受短期的坏处，所以结果就是在陷阱中越陷越深。吸毒者上瘾也是类似机制。//@Serendipityfiona:想知道这样的困境如何解决
+
+复杂系统内常有所谓的“系统性陷阱” （system trap)， 就是系统的参与者为了达到某一个目的，不断朝某个方向发力，但是系统内别的参与者的反作用力会把它抵消，结果就是大家胶着在那里浪费力气，而且很难达到原来的目的。日本过去三十年的流动性陷阱 (liquidity trap)，不断印钞但利率仍然为零，就是这种情况。美国一百年前搞的禁酒运动 （后来被迫取消），也是这种情况。
+
+-----
 @图拉鼎 https://weibo.com/1846569133/H9nG2Fk7r?ref=collection
 
 今年的一个小改变是：买书不看完，并继续买，完全没有心理负担了。
