[R] publish org files

--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,33 @@
 #+title: Paste
 
 -----
+有很多成功人士，他们完全知道怎么不断进步，知道怎么刻意练习，知道如何造势，知道怎么高别人一头，但是他们并不一定幸福。他的心态可能失衡，他一和人比较就沮丧，搞不好还会自杀。
+
+世俗成功和内心幸福是不同的维度。阿德勒的学问不是告诉你怎么成功，而是告诉你怎么坦然面对这个社会。你说阿德勒哲学是不是唯心的？那我要问，“幸福”这个东西是不是唯心的？人除了那些可测量的世俗成功标准之外，内心还有没有不可测量的意义？
+
+-----
+课题分离是自由社会的必然要求。人和人之间要有一个界限感，每个人为自己负责，人生就能简单化。
+
+现在流行一句话叫“我爱你，与你无关”，我看这就是课题分离。爱谁、信任谁、帮助谁，那是你的课题，至于说这个人会不会爱你、会不会辜负你的信任、会不会对得起你的帮助，那是他的课题。
+
+同样道理，我们完全可以说“我好好工作，与老板无关”。很多人抱怨领导和老板，说用人不公赏罚不明等等，但是你既然选择了这份工作，那把工作做好就是你的课题 —— 至于说老板对你如何，那是他的课题。
+
+这也是为什么现代人提供帮助的时候完全不应该指望回报。如果帮助一个人是为了让他报答，那你从一开始就是错的 —— 你是想要控制别人，你是在干涉别人的生活！这样的帮助谁敢接受？这不是阴谋诡计是什么？
+
+越是现代社会，越容易接受课题分离。我们看现在在大城市生活的年轻人过年回家最不爱听亲戚唠叨。长辈们已经习惯了对他人生活的横加干涉，一见面问长问短……可是年轻人已经习惯了课题分离。
+
+-----
+有的人说从小性格孤僻，害怕外面的世界，所以不敢出门只能待在家里，这是他的性格悲剧吗？不是。他也知道孤僻的性格不好，但是这个性格对他有利 —— 有了这个性格，他就有了不出门的理由，他就可以一直得到父母的照顾。
+
+弱者很善于把过去的不幸和性格的缺陷当做武器使用。他会抱怨这些不幸和缺陷，但是他*需要*不幸和缺陷。他拒绝改变。
+
+那你说，抛弃那些上不了台面的目的，主动改变自己的性格，做个阳光正面的强人不是更好吗？是。但是改变生活方式是有风险的。他已经习惯了自己的人设，别人怎么对他，他有充分的预期。他没有勇气改变。
+
+我们见过险恶环境中长大而性情优雅的强人，也见过家庭条件优越而性格猥琐的弱者。这个世界给了你什么，那是你决定不了的。但是怎么看待、怎么利用手里的东西，那是你可以决定的。咱们不要学弗洛伊德，不能一有什么问题都是你妈妈的错。心理分析师让你大哭一场又有啥用呢？咱们得学阿德勒，你可以改变自己。
+
+而改变需要勇气。岸见一郎说，阿德勒心理学是关于勇气的心理学。
+
+-----
 为什么电影的帧率24fps就可以非常流畅，而电脑动画和游戏必须60fps呢？因为，电影的每一帧的曝光时间是几十毫秒，所以没一帧都是模糊帧。而电脑游戏的每一帧曝光时间无限接近0，是清晰帧。结果是，前者因为模糊而连贯，后者因为情绪而跳顿。
 
 -----
