--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,9 @@
 #+title: Paste
 
 -----
+经过 20 年的发展，中国成为了世界上最繁荣的互联网市场，用无数资本和努力换来了大量先进经验和人才。比如“张小龙的产品观，字节跳动的内容产品方法论，拼多多的增长黑客”这些最一线的经验都只流通在中文世界中。
+
+-----
 有很多成功人士，他们完全知道怎么不断进步，知道怎么刻意练习，知道如何造势，知道怎么高别人一头，但是他们并不一定幸福。他的心态可能失衡，他一和人比较就沮丧，搞不好还会自杀。
 
 世俗成功和内心幸福是不同的维度。阿德勒的学问不是告诉你怎么成功，而是告诉你怎么坦然面对这个社会。你说阿德勒哲学是不是唯心的？那我要问，“幸福”这个东西是不是唯心的？人除了那些可测量的世俗成功标准之外，内心还有没有不可测量的意义？
