--- a/src/blogs.org
+++ b/src/blogs.org
@@ -1,8 +1,8 @@
 #+title: 个人博客 Blogs
 
 ** 2019
-- 201902 [[file:tour-of-forbidden-city-on-festival-day.org][春节逛了一圈故宫]]
-- 201902 [[file:lucky-to-have-someone-to-share.org][能找到一个人分享是多么难得的一件事情]]
+- 201902 [[file:tour-of-forbidden-city-on-festival-day.org][春节逛圈故宫]]
+- 201902 [[file:lucky-to-have-someone-to-share.org][能找到一个人分享是多么难得的事情]]
 - 201901 [[file:instagram-engineering-3-rules-to-a-scalable-cloud-application-architecture.org][Instagram Engineering’s 3 rules to a scalable cloud application architecture]]
 - 201901 [[file:geekbang-tech-and-business-cases.org][极客时间|技术与商业案例解读 文章目录]]
 - 201901 [[file:geekbang-ai-internal-reference.org][极客时间|AI技术内参 文章目录]]
@@ -358,6 +358,7 @@
   - [[file:review-2015.org][回顾2015]]
   - [[file:review-2016.org][回顾2016]]
   - [[file:review-2017.org][回顾2017]]
+  - [[file:review-2018.org][回顾2018]]
 - [[file:about-me.org][个人介绍 AboutMe]]
 - [[file:micro-twitter.org][只言片语 MicroTwitter]]
 
