--- a/src/paste.org
+++ b/src/paste.org
@@ -1,5 +1,12 @@
 #+title: Paste
 
+-----
+所谓的素质教育(liberal education, 自由教育) liberal arts = 自由技艺
+
+file:images/so-called-liberal-education.jpg
+
+-----
+
 但这是你口中说的因为大家是螺丝钉，每个人都不重要么？不是。这恰好是每一个角色都重要，重要到每一个角色本身不得不变成可以被同类雇员替换。个人英雄主义只能撑得起一部好莱坞电影，但撑不起一个万亿级的行业。这个行业过度到今天，已经十分标准化了，里面的每一个角色都有高度替代性。这是一个行业走向成熟的必经之路。只有这样的人员替代性，才能保证这个行业谁走谁留都一样能继续运转下去。
 
 
