--- a/src/blogs.org
+++ b/src/blogs.org
@@ -1,6 +1,7 @@
 #+title: 个人博客 Blogs
 
 ** 2019
+- 201903 [[file:pitalls-of-python-ecosystem.org][Python生态系统里的各种陷阱]]
 - 201903 [[file:instagram-under-the-hood.org][Instagram Under the Hood]]
 - 201903 [[file:running-sentry-on-ec2.org][在AWS EC2上启动Sentry]]
 - 201902 [[file:tour-of-forbidden-city-on-festival-day.org][春节逛圈故宫]]
