--- a/src/books.org
+++ b/src/books.org
@@ -45,6 +45,7 @@
 - [[file:competitive-strategy.org][竞争策略 on Coursera]]
 - [[file:financial-markets-class.org][金融市场 on Coursera]]
 - [[file:images/shizhan/index.html][大师课-施展-枢纽]] on 得到App
+- [[file:chenyu-on-internet-finance.org][风吹江南之互联网金融]] by 陈宇
 
 ** 小说
 - [[file:the-catcher-in-the-rye.org][麦田里的守望者(The Catcher in The Rye)]] by Jerome Salinger
