[R] publish org files

--- a/src/books.org
+++ b/src/books.org
@@ -67,6 +67,7 @@
 - [[file:black-swan.org][黑天鹅(Black Swan)]] by Nassim Nicolas Taleb
 - [[file:the-bed-of-procrustes.org][随机生存的智慧: 黑天鹅语录(The Bed of Procrustes)]] by Nassim Nicholas Taleb
 - [[file:antifragile.org][反脆弱: 从不确定性中获益(Antifragile: Things That Gain from Disorder)]] by Nassim Nicholas Taleb
+- [[file:nnt-words-archive.org][NNT文字合集]]
 - [[file:how-to-win-friends-and-influence-people.org][人性的弱点全集(How to win friends and influence people)]] by Dale Carnegie
 - [[file:how-to-stop-worring-and-start-living.org][人性的优点全集(How to stop worring and start living)]] by Dale Carnegie
 - [[file:hard-to-believe.org][万万没想到:用理工科思维理解世界]] by 万维刚
