--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,15 @@
 #+title: Paste
 
 -----
+以我这么多年的观察，其实加班不加班或者工作/学习努力不努力更多是态度或者是人生观问题。“努力才能做得好”、“今天工作不努力、明天努力找工作”这种浅显的道理谁都明白。自己付出了多少大部分心里也都有数。但真做起来，给自己偷懒找的借口可就多了。
+
+最常见的借口是以确定性阶段性目标代替难以量化的长期目标。比如以“都是博士，出去找工作都一样“为借口混学位，而无视在这一过程中对自己的锻炼和学习才是对长期发展最重要的投资这一事实。
+
+第二种常见的借口是“换庄换风水”。一个公司或者一个项目干不好，赶紧换个公司换个项目接着干。以为可以把自己的不良记录清零东山再起。不过大部分时候，由于之前培养的不良习惯，换个位置也差不多。
+
+第三种借口叫做“甘为小白兔”。你说我不行，我就直接认怂，老板也别要求我太高。然后本职工作混混了事，其他时间寄情于个人业余爱好。别人问起来，则曰“个人追求不同”。拜托，两件事都能干好，你选一件去干，那才叫个人追求不同。你一件事干不成，只能找另一件容易实现的去做，那叫“个人追求不得”好不好？
+
+-----
 所谓的素质教育(liberal education, 自由教育) liberal arts = 自由技艺
 
 file:images/so-called-liberal-education.jpg
