[R] publish org files

--- a/src/paste.org
+++ b/src/paste.org
@@ -1,6 +1,16 @@
 #+title: Paste
 
 -----
+https://www.weibo.com/1834459124/H6nD3AtS5?ref=collection
+
+最近自己攒了一台 PC：Intel Core i9-9900K，G.Skill 64G 3466MHz DDR4 内存，Gigabyte Z390 Aorus Master 主板，Samsung 970 Pro SSD，Corsair Hydro H150i PRO 水冷，Corsair Crystal 570X RGB 机箱。运行我们的 systemtap-plus 的测试集，相比我的最高配的 mid-2015 MBP，整体时间减少 74%。一开始是装的 Ubuntu，但很快发现 Ubuntu 18.10 和 18.04 的官方内核还没把 post-meltdown 引入的 regression 修完整，果断放弃。后来又尝试装最新的 Fedora 29，结果发现 X Window 都起不来，对集成显卡存在兼容性问题，最后还是装了 Fedora 28 了事。
+
+-----
+https://www.weibo.com/3612558744/GAQTECOoQ
+
+再给大家说一下，字幕精读如何操作才算最佳，1、从rarbg网站下载高清无字幕的原版片源；2、从subscene下载英文字幕srt文件，用srt2txt软件转换成txt文档或可打印的pdf排版文件；3、原版视频无字幕观影一遍，初步了解情节发展情况；4、使用kindle阅读字幕，或打印到纸张阅读字幕（精读字幕的过程使用oald8或ldoce5的英英字典app查看字幕里面的生词和短语各种典故）。5、精读字幕之后，细节情况全部搞清楚了，但有些逻辑和细节还是对不上号，因为视频和字幕是分开看的。这时候需要再次无字幕观影一遍，该搞清楚的都会搞清楚。字幕精读的过程基本结束，步骤3-5可以多次重复。对我来说能走完一遍就很好了。
+
+-----
 以我这么多年的观察，其实加班不加班或者工作/学习努力不努力更多是态度或者是人生观问题。“努力才能做得好”、“今天工作不努力、明天努力找工作”这种浅显的道理谁都明白。自己付出了多少大部分心里也都有数。但真做起来，给自己偷懒找的借口可就多了。
 
 最常见的借口是以确定性阶段性目标代替难以量化的长期目标。比如以“都是博士，出去找工作都一样“为借口混学位，而无视在这一过程中对自己的锻炼和学习才是对长期发展最重要的投资这一事实。
