--- a/src/apply-visa-for-usa.org
+++ b/src/apply-visa-for-usa.org
@@ -20,10 +20,9 @@ http://www.ustraveldocs.com/cn_zh/cn-niv-typeb1b2.asp
 - 犯罪/法庭记录（无论在何地被捕或定罪，即使已服完刑期或被赦免也不例外）。
 - 请携带单位开具的就职证明以及最近三个月的工资单。
 
-在职人员
-- 请携带单位开具的就职证明以及最近三个月的工资单。
-- 企业家和公司高管
-- 请携带所在公司的职位证明以及薪酬证明。
+在职人员: 请携带单位开具的就职证明以及最近三个月的工资单。
+
+企业家和公司高管: 请携带所在公司的职位证明以及薪酬证明。
 
 -----
 
