[R] publish org files

--- a/src/fun.org
+++ b/src/fun.org
@@ -1,6 +1,52 @@
 #+title: Fun
 
 -----
+世界上最不能相信的几句话
+
+http://blog.renren.com/share/339618932/7590788371
+
+1. 就想抱着你睡觉，我绝对不动手动脚。
+2. 公车司机：后面还有一辆车。
+3. 饭店服务员：您要的菜马上就好。
+4. 小学老师，你跟我说实话，我不告诉你家长。
+5. 初中老师：这节课体育老师有事不上了。
+6. 高中老师：我就占你们一分钟。
+7. 学习好的同学：这次又没考好。
+8. 一群人来打球：我们都不会玩。
+9. 街边小店：跳楼大甩卖。
+10. 领导上台前说:下面我简单的说两句。
+11. 我班女生说：你是我最好的朋友，说知心话的朋友。（过些时间我给她发信息，她回我你有事吗？）
+12. 借钱时说:我有了马上还你,结果你不要他不还,你要了,他也不一定会还。
+13. 医生：“我们已经尽了最大努力了”。
+14. 见到久别的同学，存下各自的号码：有空常联系。
+15. 明星：我们只是普通朋友。
+16. 家长：压岁钱我给你存着。
+17. 地震局说：专家分析,近几年没有大地震。
+18. 太太： （出门前化妆时）马上就好！马上就好！
+19. 老公： （一面盯着别的女生）她哪有你漂亮 ？
+20. 食品包装：保证不添加防腐剂。
+21. 女生：我们还是可以当朋友的。
+22. 男生:乖,不会痛的。
+23. 售票员说：往里边走！里边有坐！
+24. 老师对最后一名的学生说：你很聪明，只是不努力。
+25. 你人来就好了嘛 还带什么礼物嘛。
+26. 小时候犯错或撒谎被揭穿时总会说:我下次再也不敢了。
+27. 小姐：我是新来的,刚做这行没几天。
+28. “有关部门已经介入调查”
+29. 中巴车售票员：上来吧,保证有坐，马上就走，上车就走。
+30. 公车司机最假的应该是：往里走，后面都没有人。（他大爷，后面的人脸都贴窗上了，他说没人）
+31. 售货员:我真的不挣你钱,我这是按进价卖
+32. “我再也不跟你玩了！”
+33. 改天请你吃饭。
+34. 其实你是个好人，就是我们不太适合。
+35. 老师和家长:等你考完试想怎么玩就怎么玩,没人管你!
+36. 中国足协：我们下届一定打进世界杯。
+37. 我们最终要实现共同富裕
+
+-----
+在故宫走丢真是倍儿有面子，全紫禁城开始广播“请xxx听到广播后到乾清宫”，好像被皇上召见一样[doge]
+
+-----
 file:images/ultrasound-flying-birds.png
 
 -----
@@ -1831,7 +1877,7 @@ file:images/porn-linux-command.jpg
 file:images/broken-oral-english.jpg
 
 -----
-【如果卫生巾不叫卫生巾，你觉得会叫什么呢？】1．创可贴 2．藏经阁 3．女儿红 4．吸血鬼 5．新型ufo 6．海绵宝宝 7．好朋友 8．中原一点红 9．含红 10．大姨夫 11．九阴真巾 12．草莓酱白面包 13．超大号创头贴……
+【如果卫生巾不叫卫生巾，你觉得会叫什么呢？】1. 创可贴 2. 藏经阁 3. 女儿红 4. 吸血鬼 5. 新型ufo 6. 海绵宝宝 7. 好朋友 8. 中原一点红 9. 含红 10. 大姨夫 11. 九阴真巾 12. 草莓酱白面包 13. 超大号创头贴……
 
 -----
 早晨起来看微博，确实很容易让人产生一种皇帝批阅奏章，君临天下的幻觉。国家大事潮水般涌来，需要迅速作出各种判断，提出各种建议，各种转发，各种忧国忧民，各种踌躇满志，万物皆备于我。每个人心中都藏着一个披星戴月上朝堂的皇帝，微博把人的这种情结激活了。
