--- a/src/blogs.org
+++ b/src/blogs.org
@@ -1,6 +1,8 @@
 #+title: 个人博客 Blogs
 
 ** 2019
+- 201905 [[file:joe-duffy-software-leadership-series.org][Joe Duffy's Software Leadership Series]]
+- 201905 [[file:keynes-vs-hayek.org][凯恩斯大战哈耶克]]
 - 201905 [[file:codehaus-manifesto.org][Codehaus宣言]]
 - 201905 [[file:logrotate-conf-for-nginx.org][nginx正确的logrotate配置]]
 - 201904 [[file:poission-distribution-in-bitcoin-mining.org][比特币挖矿的泊松分布问题]]
