--- a/src/python.org
+++ b/src/python.org
@@ -1,10 +1,14 @@
 #+title: Python
 
 ** book
-- [[http://learnpythonthehardway.org/][Learn Python The Hard Way]] ([[file:images/learn-py-the-hard-way/index.html][中文]])
-- [[http://itlab.idcquan.com/linux/manual/python_chinese/][A Byte of Python]]
-- [[http://pythonguidecn.readthedocs.io/zh/latest/index.html][Python最佳实践指南]]
-- [[file:images/the-django-book/index.html][The Django Book]] 不错的Django入门材料
+- turotial
+  - [[http://learnpythonthehardway.org/][Learn Python The Hard Way]] ([[file:images/learn-py-the-hard-way/index.html][中文]])
+  - [[http://itlab.idcquan.com/linux/manual/python_chinese/][A Byte of Python]]
+  - [[http://pythonguidecn.readthedocs.io/zh/latest/index.html][Python最佳实践指南]]
+  - [[file:images/the-django-book/index.html][The Django Book]] 不错的Django入门材料
+- vm
+  - [[http://pgbovine.net/cpython-internals.htm][Philip Guo - CPython internals: A ten-hour codewalk through the Python interpreter source code]]
+  - [[https://www.youtube.com/watch?v=HVUTjQzESeo][Allison Kaptur - Bytes in the Machine: Inside the CPython interpreter - PyCon 2015 - YouTube]]
 
 ** language
 *** philosophy
@@ -524,7 +528,6 @@ def parse_date(s):
 
 #+END_SRC
 
-
 *** pip
 python模块管理工具(python package index)
 - https://github.com/pypa/pip/
@@ -637,7 +640,3 @@ async def test():
 loop = asyncio.get_event_loop()
 loop.run_until_complete(test())
 #+END_SRC
-
-** inside
-- [[http://pgbovine.net/cpython-internals.htm][Philip Guo - CPython internals: A ten-hour codewalk through the Python interpreter source code]]
-- [[https://www.youtube.com/watch?v=HVUTjQzESeo][Allison Kaptur - Bytes in the Machine: Inside the CPython interpreter - PyCon 2015 - YouTube]]
